# notecheck

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/note_checker/: __init__.py
src/note_checker/cli/: __main__.py  entry.py
src/note_checker/lib/: checker.py  prompts.py  util.py
src/notecheck/lib/: checker.py  prompts.py
