[project]
name = "note-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kyle Tennison", email = "kyletennison05@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "openai>=1.73.0",
    "typer>=0.15.2",
]

[project.scripts]
notecheck = "note_checker.cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
